--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     }
   },
   "dependencies": {
+    "bootstrap-dark-5": "^1.1.3",
     "electron-squirrel-startup": "^1.0.0",
     "popper.js": "^1.16.1",
     "serialport": "^10.4.0"
