--- a/package.json
+++ b/package.json
@@ -22,14 +22,9 @@
       "packagerConfig": {},
       "makers": [
         {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "ElectoTerm"
-          }
-        },
-        {
           "name": "@electron-forge/maker-zip",
           "platforms": [
+            "win32",
             "darwin"
           ]
         },
