--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,11 +11,12 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    # runs-on: windows-latest
 
     strategy:
       matrix:
         node-version: [16.x]
+        os: [windows-latest, ubuntu-latest, macos-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
