lets try normal artefact capturing

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,8 @@ jobs:
       matrix:
         node-version: [16.x]
         os: [windows-latest, ubuntu-latest, macos-latest]
+        name: [ElectroTermWin, ElectroTermLinux, ElectroTermMac]
+        path: [out/make/zip/win32/x64/ElectoTerm-win32-x64-1.0.0.zip, out/make/deb/x64/electoterm_1.0.0_amd64.deb, out/make/zip/darwin/x64/ElectoTerm-win32-x64-1.0.0.zip]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     runs-on: ${{ matrix.os }}
     steps:
@@ -31,6 +33,6 @@ jobs:
     - name: Archive artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: ElectroTermAPP
-        path: out/make/zip/win32/x64/ElectoTerm-win32-x64-1.0.0.zip
+        name: ${{ matrix.name }}
+        path: ${{ matrix.path }}
         retention-days: 1
